--- a/recipes/Ramen.html
+++ b/recipes/Ramen.html
@@ -3,6 +3,7 @@
     <head>
         <Title>Ramen</Title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles2.css">
     </head>
 
 <Body>
