--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <Title>David's Recipes</Title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
 <Body>
