--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <li><a href="./recipes/Ramen.html">Ramen</a></li>
     <li><a href="./recipes/Matcha.html">Matcha</a></li>
     <li><a href="./recipes/Bibimbap.html">Bibimbap</a></li>
-    </ul>
+    <img src="https://img.freepik.com/free-vector/smiling-chef-cartoon-character_8250-10.jpg?w=740" alt="cartoon chef" class="Chef">
+</ul>
 </Body>
 
 </html>
