--- a/recipes/Bibimbap.html
+++ b/recipes/Bibimbap.html
@@ -7,11 +7,11 @@
     </head>
 
 <Body>
-    <h1>BimBamBop</h1>
+    <h1 class="Title3">BimBamBop</h1>
     <img src="https://i.ecoeats.uk/i/resize:fill:711:400:0/gravity:ce/plain/images/80c8e9a6-df22-4d85-b9f1-03202087adc0/679b25c8-af1a-4ad4-94fc-b53f0988db32.jpg" alt="Colourful BimBamBop">
-<H2>Description</H2>
+<h2 class="Title6">Description</H2>
 <p> Bibimbap is one of the most well known Korean dishes. A rice bowl topped with all sorts of seasoned sautéed vegetables, marinated meat (usually beef), a fried egg sunny side up, finished with a sprinkle of sesame and generous dollop of a sweet-spicy-savoury Bibimbap sauce. It takes some time to gather the ingredients, but the end result is so worth it!</p>
-<H2>Ingredients</H2>
+<h2 class="Title6">Ingredients</H2>
 <ul>
     <li>1 bowl of cooked rice</li>
     <li>2 ounces of thinly sliced tender beef (rib eye, sirloin, etc. or ground beef)</li>
@@ -20,7 +20,7 @@
     <li>1/2 tbsp of sesame oil</li>
     <li>Optional: 1 egg</li>
 </ul>
-<h2>Steps</h2>
+<h2 class="Title6">Steps</h2>
 <ol>
     <li>Place a serving of rice into a big bowl.</li>
     <li>Nicely arrange a small amount of each prepared vegetable and beef over the rice.</li>
