--- a/recipes/Matcha.html
+++ b/recipes/Matcha.html
@@ -7,30 +7,30 @@
     </head>
 
 <Body>
-    <h1>Matcha</h1>
+    <h1 class="Title2">Matcha</h1>
     <img src="https://bigoven-res.cloudinary.com/image/upload/h_320,w_320,c_fill/green-matcha-tea-latte.jpg" alt="A frothy cup of Matcha">
-<H2>Description</H2>
+<H2 class="Title5">Description</H2>
 <p> High in antioxidants, Matcha green tea offers many great health benefits and calming effects. Drinking this beloved Japanese tea could be your new morning routine. Learn how to make a perfect cup of matcha at home!</p>
 <p> Since matcha is in the form of a finely ground powder, the way we make it is very different from the way to prepare loose-leaf green teas. In Japan, special tea utensils are typically used to prepare matcha. Below are the main tea utensils you will need to make matcha:</p>
-<H2>4 Things You Need to Make Matcha</H2>
+<H2 class="Title5">4 Things You Need to Make Matcha</H2>
 <ul>
     <li>Chawan (Tea Bowl)</li>
     <li>Chasen (Tea Whisk)</li>
     <li>Chashaku (Tea Scoop)</li>
     <li>Fine Sieve</li>
 </ul>
-<H2>Ingredients</H2>
+<H2 class="Title5">Ingredients</H2>
 <ul>
     <li>Matcha powder</li>
     <li>Boiling water</li>
 </ul>
-<h2>Steps</h2>
-<h3>To Prepare Equipment</h3>
+<h2 class="Title5">Steps</h2>
+<h3 class="Title5">To Prepare Equipment</h3>
 <ol>
     <li>Pour boiling water into your Chawan and gently whisk the tip of the Chasen in the hot water. This warms up the bowl and softens the bamboo tines, making the Chasen flexible and springy for effective whisking action.</li>
     <li>Discard the hot water from the bowl and dry the inside of the bowl with a clean dry cloth.</li>
 </ol>
-<h3>To Prepare Matcha</h3>
+<h3 class="Title5">To Prepare Matcha</h3>
 <ol>
     <li>Scoop 1 tsp (or 1 ½ heaping tea scoops) matcha into the fine sieve over your tea bowl and sift your matcha into the dry, empty bowl. This will ensure there are <em>no clumps</em> and your tea will be smooth.</li>
     <li>Pour hot water into your Chawan (90mL at 65 degrees Celsius for best results).</li>
