--- a/recipes/Ramen.html
+++ b/recipes/Ramen.html
@@ -7,18 +7,18 @@
     </head>
 
 <Body>
-    <h1>Ramen</h1>
+    <h1 class="Title1">Ramen</h1>
     <img src="https://styles.redditmedia.com/t5_7v7ji/styles/profileIcon_9zdqn2ugq6v71.jpg?width=256&height=256&crop=256:256,smart&s=843caa61cc237bcc9f322580ee28a2bee48a27de" alt="A hot bowl of Ramen">
-<H2>Description</H2>
+<h2 class="Title4">Description</h2>
 <p> I know what you're thinking. A recipe for <em>instant ramen</em>? Don’t you just follow the directions on the package—boil water, dump in noodles and spice packets, and “stir occasionally”?</p>
 <p> The following step-by-step directions for preparing a standard four-ounce package of ramen was developed to create the <strong>best possible version</strong> of instant noodles.</p>
-<H2>Ingredients</H2>
+<h2 class="Title4">Ingredients</h2>
 <ul>
     <li>1 pack of instant noodles</li>
     <li>2½ cups of water</li>
     <li>1 raw egg</li>
 </ul>
-<h2>Steps</h2>
+<h2 class="Title4">Steps</h2>
 <ol>
     <li>Bring 2 ½ cups of water to a boil in a large saucepan over high heat. Add the soup base and vegetable mix. Boil for 1 minute.</li>
     <li>Add the whole disc of dried noodles. <em>Do not break the noodles in half.</em> I know it’s fun to break stuff, but you must resist. Instead, slip the noodles into the boiling broth and press them down with chopsticks or a fork to keep them submerged. Don't stir the noodles—just keep them submerged. After 2 minutes, the noodles will soften and break apart.</li>
